[project]
name = "relay"
version = "0.1.0"
description = "ARC application runtime: CRUD, hooks, cache/lock/queue, whitelisting, streaming"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
]

[project.entry-points."arc.plugins"]
relay = "relay:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["relay"]
